2011-08-04  Adam Barth  <abarth@webkit.org>

        More logging to help debug the "no SVN rev on Chromium Windows bots"
        bug.  My current theory is that we're trying to detect the SCM system
        in the wrong directory.

        * Scripts/webkitpy/layout_tests/port/base.py:

2011-08-04  Dimitri Glazkov  <dglazkov@chromium.org>

        Speed up webkit-patch optimize-expectations significantly by not collecting test files.
        https://bugs.webkit.org/show_bug.cgi?id=65697

        I neglected to realize that collecting test names is not necessary for this operation.

        Reviewed by Adam Barth.

        * Scripts/webkitpy/tool/commands/expectations.py: Changed to pass an empty list of test files.

2011-08-04  Adam Barth  <abarth@webkit.org>

        checkout_unittest.js should have better coverage of checkout.js
        https://bugs.webkit.org/show_bug.cgi?id=65671

        Reviewed by Dimitri Glazkov.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/checkout.js:
            - Remove unused functions.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/checkout_unittests.js:
            - Test remaining public functions in the checkout module.

2011-08-04  Dmitry Lomov  <dslomov@google.com>

        https://bugs.webkit.org/show_bug.cgi?id=65706
        Run run-unit-tests on release mode test bots.
        Reenabling after 61812 is fixed.

        Reviewed by Adam Roben.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:

2011-08-04  Adam Barth  <abarth@webkit.org>

        builders.js needs unit tests
        https://bugs.webkit.org/show_bug.cgi?id=65670

        Reviewed by Dimitri Glazkov.

        This test requires somewhat large test fixtures, but using real
        examples seemed better than trimming them down too much.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/builders.js: