@@ -621,22 +621,6 @@ class Port(object):
         WebKit source tree and the list of path components in |*comps|."""
         return self._config.path_from_webkit_base(*comps)
 
-    @memoized
-    def webkit_source_scm(self):
-        # On the chromium bots, the cwd is the root of the chromium checkout.
-        # self._config.webkit_base_dir() knows where the webkit root is, no other
-        # object in NRWT seems to keep an SCM around. (Unlike webkit-patch
-        # where it's on the Tool/Host object.)
-        # FIXME: We should be able to get the SCM from somewhere else.
-        # FIXME: Due to Chromium's insane DEPS system, the root of the WebKit
-        # checkout isn't actually from svn.webkit.org. Instead, we detect the
-        # scm from the Source directory, which really does map to svn.webkit.org.
-        path = self.path_from_webkit_base('Source')
-        _log.debug('---webkit_source_scm---')
-        _log.debug(path)
-        _log.debug(os.getcwd())
-        return detect_scm_system(path)
-
     def path_to_test_expectations_file(self):
         """Update the test expectations to the passed-in string.
 
